# dnevnik

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: diary.rs  lib.rs  model.rs  prelude.rs
src/model/: attendance.rs  hw.rs  lessons.rs  marks.rs
