[package]
name = "dnevnik"
version = "0.3.5"
edition = "2021"
authors = ["maxus"]
readme = "README.md"
repository = "https://github.com/Maxuss/dnevnik"
license = "MIT"
description = "dnevnik.mos.ru Internal API Wrapper"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.85"
log = "0.4.17"
anyhow = "1.0.65"
lazy_static = "1.4.0"

[dependencies.uuid]
version = "1.1.2"
features = ["serde"]

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]

[dependencies.reqwest]
version = "0.11.12"
features = ["serde_json", "tokio-native-tls", "json"]

[dependencies.tokio]
version = "1.21.1"
features = ["macros", "fs"]

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

[dev-dependencies]
dotenv = "0.15.0"
rand = "0.8.5"